package com.samsung.tcm.schema;

public interface IIdentifier {
    String getIdentifier();
}
