package com.samsung.tcm.schema;

public interface IIdentifierLocation {
    String getIdentifierLocationType();
}
