package com.samsung.tcm.schema;

public interface IIdentifyMethod {
    String getIdentifierMethodType();
}
