package com.samsung.tcm.schema;

public interface ILanguage {
    String getLanguage();
}
