package com.samsung.tcm.schema;

public interface ITestCaseFormatType {
    String getTestCaseFormatType();
}
