package com.samsung.tcm.schema;

public interface ITestCaseType {
    String getTypeCaseType();
}
