package com.samsung.tcm.schema;

public interface ITestFramework {
    String getTestFramework();
}
