package com.samsung.tcm.schema;

public interface ITestType {
    String getTestType();
}
