package com.samsung.tcm.schema;

/**
 * THIS IS AUXILIARY INFORMATION. IT'S NOT MANDATORY
 */
public class SCTestTarget {
    private String name;

    public SCTestTarget(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
